adding new h2 tag and change some colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <h1>hello from mostafa loaui </h1>    
+    <h1>hello from mostafa loaui new branch </h1>    
+    <h2>hello from mostafa loaui new branch </h2>    
     <p>welcom to git bash </p>
 
 
